--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
+# this is a placeholder, file copy it to .env.local
+# and add your AWS_ACCESS_ID and AWS_SECRET_KEY
+# do not share or commit those values to a repo!
+AWS_ACCESS_ID=
+AWS_SECRET_KEY=
 DATA_INPUT="eviction-lab-etl-data/2018-12-14"
 GEOJSON_INPUT="eviction-lab-etl-data/census"
 TILESET_OUTPUT="eviction-lab-tilesets/2022-03"
 DATA_OUTPUT="eviction-lab-etl-data/2022-03"
-
