--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@
 # do not share or commit those values to a repo!
 AWS_ACCESS_ID=
 AWS_SECRET_KEY=
-DATA_INPUT="eviction-lab-etl-data/2018-12-14"
+DATA_INPUT="eviction-lab-etl-data/source/2022-03/modelled"
+DATA_INPUT_TYPE="modelled"
 GEOJSON_INPUT="eviction-lab-etl-data/census"
 TILESET_OUTPUT="eviction-lab-tilesets/2022-03"
+EXTENTS_OUTPUT="eviction-lab-tool-data/data/extents"
 DATA_OUTPUT="eviction-lab-etl-data/2022-03"
